fix vertical alignment in all but with menu button

--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -56,9 +56,13 @@
 
     color: $color-white;
 
-    &:not(&--with-description) {
+    @include mq(m) {
+      margin-top: 0.7rem;
+    }
+
+    &--with-description {
       @include mq(m) {
-        margin-top: 0.7rem;
+        margin-top: 0.45rem;
       }
     }
 
